/*
 * Copyright 2016 <Admobilize>
 * All rights reserved.
 */

syntax = "proto3";

package matrix_malos;

// configuration of drivers. Both global configuration and
// for specific drivers.
message DriverConfig {
  // Delay between updates. In seconds.
  float delay_between_updates = 1;
  // Timeout after last ping.
  float timeout_after_last_ping = 2;

  // Values for LEDs. When configuring the driver you should leave
  // delay_between_updates and timeout_after_last_ping unchanged.
  EverloopImage image = 3;
}

// Message used by MALOS to report its internal state and the configuration of
// its drivers.
message DriverInfo {
  // Driver name.
  string driver_name = 1;
  // Base port: Port where the device is located.
  // base_port => config channel (0MQ pull, you should push)
  // base_port + 1 => keepalive channel (0MQ pull, you should push)
  // base_port + 2 => error channel (0MQ push, you should pull)
  // base_port + 3 => send update channel (0MQ push, you should pull)
  int32 base_port = 2;

  // Does the device provide updates? Some devices such as the everloop
  // LED array don't provide updates.
  bool provides_updates = 3;
  // What is the device delay between updates? In milliseconds.
  // This field only makes sense if provides_updates is set.
  int32 delay_between_updates = 4;

  // Does the device need pings (keepalive messages) to keep returning messages?
  bool needs_pings = 5;
  // This field only makes sense if needs_pings is set.
  // If the device hasn't received keepalive messages in a time interenal
  // bigger than this amount, the device will stop sending updates.
  int32 timeout_after_last_ping = 6;

  // Notes set by the driver. Meant to be read by humans.
  string notes_for_human = 7;
}

// Information about all the available drivers.
message MalosDriverInfo {
  // The available drivers.
  repeated DriverInfo info = 1;
}

// Dummy lecture.
message Dummy {
  // Random value.
  float value = 1;
}

// Basic Humidity lecture.
message Humidity {
  // Humidity. 
  float humidity = 1;

  // Temperature.
  float temperature = 2;
}


// Basic UV radiation lecture.
message UV{
  // UV index.
  float uv_index = 1;

  // Risk of harm from unprotected sun exposure, for the average adult.
  // Accordin to the OMS table. https://www.epa.gov/sunsafety/uv-index-scale-0
  string oms_risk = 2;
}


// Basic Pressure lecture.
message Pressure {
  // Pressure.
  float pressure = 1;

  // Altimeter.
  float altitude = 2;

  // Temperature.
  float temperature = 3;
}

// Basic IMU lecture.
message Imu {
  //Vertical axis (yaw)
  float yaw = 1;

  //Lateral axis (pitch)
  float pitch = 2;

  //Longitudinal axis (roll)
  float roll = 3;
}

// Value for a led. Values range from 0 to 255.
message LedValue {
  uint32 red = 1;
  uint32 green = 2;
  uint32 blue = 3;
  uint32 white = 4;
}

// The led array.
message EverloopImage {
  repeated LedValue led = 1;
}

/* ZigBee messages */

// Network start event
message ZigBeeNetworkStatus {
  bool is_active = 1;
  uint32 pan_id = 2;
  uint32 short_id = 3;
}

// ZigBee device announce
message ZigBeeAnnounce {
  uint32 short_id = 1;
  uint32 cluster_id = 2;
  uint32 zdo_commnd = 3;
  uint32 zdo_status = 4;
}

// ZigBee bulb commands
message ZigBeeBulbCmd {
  uint32 short_id = 1;
  enum EnumCommands {
    ON = 0;
    OFF = 1;
    TOGGLE = 2;
    LEVEL = 3;
    IDENTIFY = 4;
  }
  EnumCommands command = 2;
  repeated uint32 params  = 3;
}

